[tool.poetry]
name = "adventofcode2017"
version = "0.1.0"
description = ""
authors = ["kbaikov <konstantin.baikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
anytree = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^3.9"
black = "^18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
